# benchmark_cnn

./: CLAUDE.md  README.md  benchmark_official.py  count_params.py  main.py  mobilenetv4.md  pyproject.toml
benchmarks/: batch_size_comparison.csv  batch_size_comparison.py  compare_decoders.py  comparison_2d_vs_3d.csv  comparison_2d_vs_3d.py  decoder_comparison.csv
benchmarks/2d_vs_3d/: benchmark.py  comparison_2d_vs_3d.csv
benchmarks/combined/: benchmark.py  combined_benchmark_results.csv
benchmarks/encoder_only/: benchmark.py  benchmark_results.csv  benchmark_results_all.csv  benchmark_results_comparison.csv
benchmarks/fpn_decoder/: README.md  benchmark.py  benchmark_results.csv
benchmarks/models/: __init__.py  decoders.py  models_3d.py
benchmarks/quantization/: README.md  benchmark.py  quantization_benchmark.csv
benchmarks/unet_decoder/: README.md  benchmark.py  benchmark_results.csv
docs/: totalsegmentator_stunet.md
