[project]
name = "benchmark-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "psutil>=7.2.0",
    "tabulate>=0.9.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "totalsegmentator>=2.12.0",
    "tqdm>=4.67.1",
]
